2007-08-09  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Added DragIncrement support.

2007-08-09  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Added keyboard (arrow keys) support.

2007-08-09  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Removed useless return statements left by the refactoring process.

2007-08-09  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Refactored the code in preparation to the keyboard support.

2007-08-09  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Now it does not make the containing row/column smaller than itself.

2007-08-07  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: The beginning of the implementation (does not support preview and may have bugs).

2007-08-07  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Added theme loading and cursor logic.

2007-08-06  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Finished stubbing.

2007-08-06  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Added.

2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>

	* UserControl.cs: Implemented(?).

2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderGapMaskConverter.cs: Implemented.

2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderGapMaskConverter.cs: Added.

2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>

	* Decorator.cs: Implemented IAddChild members and fixed Child.

2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>

	* Decorator.cs: Added.
	
2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Switched to implemented *EventArgs types.

2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>

	* ContentControl.cs: Added.

2007-07-30  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Fixed StretchDirection handling.

2007-07-30  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Some more fixes.
